creating swagger documentation
